HW3/javali_tests/othertests/A4_team/arrayCast.javali.err
Debug information for file: javali_tests/othertests/A4_team/arrayCast.javali
AST Resulting From Parsing Stage:
ClassDecl (name: A, superClass: Object)
ClassDecl (name: B, superClass: A)
ClassDecl (name: Main, superClass: Object)
| VarDecl (name: a, type: A[])
| VarDecl (name: b, type: B)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | Seq ()
| | | Assign ()
| | | | Var (name: a)
| | | | NewArray (typeName: A[])
| | | | | IntConst (value: 1)
| | | Assign ()
| | | | Index ()
| | | | | Var (name: a)
| | | | | IntConst (value: 0)
| | | | NewObject (typeName: B)
| | | Assign ()
| | | | Var (name: b)
| | | | Cast (typeName: B)
| | | | | Index ()
| | | | | | Var (name: a)
| | | | | | IntConst (value: 0)
Error message: TYPE_ERROR

Phase semantic failed because we expected to see:
OK
But we actually saw:
TYPE_ERROR
The difference is:
At line   1 /   1:
< OK
> TYPE_ERROR

