HW3/javali_tests/othertests/A4_team/arrayCast.javali
class A {}

class B extends A {}

class Main {
    A[] a;
    B b;
    
    void main() {
        a = new A[1];
        a[0] = new B();
        b = (B) a[0];   
    }
}